Integrate frontend and backend

--- a/customer-statement-frontend/.env
+++ b/customer-statement-frontend/.env
@@ -2,5 +2,7 @@ SKIP_PREFLIGHT_CHECK=true
 REACT_APP_AWS_ACCESS_KEY_ID=AKIAQ3EGUOJUPNUWLHW7
 REACT_APP_AWS_SECRET_ACCESS_KEY=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
 REACT_APP_AWS_REGION=eu-west-1
-REACT_APP_INPUT_BUCKET_NAME=teststack-inputbucketcsr2d487c64-xl5w86kvrqjg
-REACT_APP_OUTPUT_BUCKET_NAME=teststack-outputbucketcsre20eaf00-0drv7sle2kzz
+REACT_APP_INPUT_BUCKET_NAME=teststack-inputbucketcsr2d487c64-pppyo4grvrxm
+REACT_APP_OUTPUT_BUCKET_NAME=teststack-outputbucketcsre20eaf00-dxpqoqiybddc
+REACT_APP_BASE_URL=http://localhost:8000
+
