--- a/customer-statement-frontend/package.json
+++ b/customer-statement-frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@aws-sdk/client-s3": "^3.540.0",
+    "@tanstack/react-query": "^5.28.9",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -12,6 +13,7 @@
     "@types/react": "^18.2.73",
     "@types/react-dom": "^18.2.23",
     "aws-sdk": "^2.1588.0",
+    "axios": "^1.6.8",
     "base-64": "^1.0.0",
     "bootstrap": "^5.3.3",
     "file-saver": "^2.0.5",
@@ -19,6 +21,7 @@
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-icons": "^5.0.1",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.8",
     "typescript": "^4.9.5",
