--- a/customer-statement-processor/package.json
+++ b/customer-statement-processor/package.json
@@ -1,6 +1,9 @@
 {
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/multer": "^1.4.11",
+    "@types/multiparty": "^0.0.36",
     "@types/node": "^20.11.5",
     "@types/xml2js": "^0.4.14",
     "gts": "^5.3.0",
@@ -21,9 +24,13 @@
     "@aws-sdk/client-s3": "^3.540.0",
     "@aws-sdk/lib-storage": "^3.540.0",
     "aws-sdk": "^2.1587.0",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "csv-parse": "^5.5.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "multer": "^1.4.5-lts.1",
+    "multiparty": "^4.2.3",
     "pdfkit-table": "^0.1.99",
     "ts-node": "^10.9.2",
     "xml2js": "^0.6.2"
