--- a/customer-statement-frontend/package.json
+++ b/customer-statement-frontend/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.540.0",
     "@tanstack/react-query": "^5.28.9",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -12,7 +11,6 @@
     "@types/node": "^16.18.91",
     "@types/react": "^18.2.73",
     "@types/react-dom": "^18.2.23",
-    "aws-sdk": "^2.1588.0",
     "axios": "^1.6.8",
     "base-64": "^1.0.0",
     "bootstrap": "^5.3.3",
@@ -23,6 +21,7 @@
     "react-dropzone": "^14.2.3",
     "react-icons": "^5.0.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
     "styled-components": "^6.1.8",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
