--- a/customer-statement-processor/Dockerfile
+++ b/customer-statement-processor/Dockerfile
@@ -1,5 +1,5 @@
 # --platform=linux/amd64 is needed to run docker image in fargate
-FROM --platform=linux/amd64 node:21-alpine
+FROM  --platform=linux/amd64  node:21-alpine
 WORKDIR /app
 COPY ./package.json ./
 COPY ./package-lock.json ./
@@ -13,4 +13,4 @@ EXPOSE 8000
 
 RUN ["chmod", "+x", "./build.sh"]
 
-CMD ["node", "/app/build/src/index.js"]
+CMD ["node", "/app/src/index.js"]
