--- a/customer-statement-processor/package.json
+++ b/customer-statement-processor/package.json
@@ -2,12 +2,15 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
     "@types/multer": "^1.4.11",
     "@types/multiparty": "^0.0.36",
     "@types/node": "^20.11.5",
     "@types/xml2js": "^0.4.14",
     "gts": "^5.3.0",
+    "jest": "^29.7.0",
     "rimraf": "^5.0.5",
+    "ts-jest": "^29.1.2",
     "typescript": "~5.4.3"
   },
   "scripts": {
@@ -18,7 +21,8 @@
     "prepare": "npm run compile",
     "pretest": "npm run compile",
     "posttest": "npm run lint",
-    "build": "tsc -p tsconfig.json"
+    "build": "tsc -p tsconfig.json",
+    "test": "jest"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.540.0",
